--- a/vidi.css
+++ b/vidi.css
@@ -3,6 +3,7 @@ body {
 }
 
 .container-footer {
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
